# clousel

carousel_simulator/: go.mod
carousel_simulator/cmd/carousel_simulator/: carousel_simulator.go
firmware/: README.md  firmware.code-workspace
firmware/framework/: broker.h  persistency.h  strategy.h  wifi.h
firmware/framework/broker/: broker.h  i_broker_client.h  i_broker_listener.h  message.h  topic.h
firmware/framework/core/: error.h  i_io.h  i_runnable.h  i_timestamp.h  io.h  logger.h  observer.h
firmware/framework/examples/: CMakeLists.txt  README.md  vcpkg.json
firmware/framework/examples/broker/: CMakeLists.txt  broker.cpp
firmware/framework/persistency/: i_persistency_flash.h  persistency.h
firmware/framework/strategy/: i_scenario_maker.h  i_step.h  step_actuator_off.h  step_actuator_on.h  step_runner.h  (+1 more)
firmware/page/: index-c.html  index-fail-c.html  index-fail.html  index-ok-c.html  index-ok.html  index.html
firmware/platform/windows/: CMakeLists.txt  router.h  windows.code-workspace  winmain.cpp
firmware/scripts/: config_read.json  config_write.json  play.json
frontend/: .gitignore  vue.config.js
frontend/certs/: dev.local+4.pem
frontend/v1/: .gitignore  package.json  server.crt  server.key
playground/: .gitignore
playground/websockets/: go.mod
services/: go.work  go.work.sum
services/accountant/: .env  accountant.go  build_arm64.bat  deploy2pi.bat  go.sum
services/carousel/: carousel.go  deploy2pi.bat  go.sum
services/carousel_service/: README.md  sqlite.db
services/carousel_service-deprecated/: go.mod  go.sum
(+444 files in other folders)
